--- a/ProEvents/Front/ProEvents-App/src/app/events/events.component.html
+++ b/ProEvents/Front/ProEvents-App/src/app/events/events.component.html
@@ -1,1 +1,7 @@
 <p>events works!</p>
+
+<div *ngFor="let event of events">
+  <p><b>Tema:</b> {{ event.theme }}</p>
+  <p><b>Local:</b> {{ event.location }}</p>
+  <hr />
+</div>
