--- a/ProEvents/Front/ProEvents-App/src/app/app.component.html
+++ b/ProEvents/Front/ProEvents-App/src/app/app.component.html
@@ -1,7 +1,9 @@
-<h1>Eventos</h1>
-<app-events></app-events>
+<div class="container">
+  <h1>Eventos</h1>
+  <app-events></app-events>
 
-<h1>Palestrantes</h1>
-<app-speakers></app-speakers>
+  <h1>Palestrantes</h1>
+  <app-speakers></app-speakers>
 
-<router-outlet></router-outlet>
+  <router-outlet></router-outlet>
+</div>
