grid of events created

--- a/ProEvents/Front/ProEvents-App/src/app/events/events.component.html
+++ b/ProEvents/Front/ProEvents-App/src/app/events/events.component.html
@@ -1,7 +1,35 @@
-<p>events works!</p>
+<h2>Eventos</h2>
+<hr />
 
-<div *ngFor="let event of events">
-  <p><b>Tema:</b> {{ event.theme }}</p>
-  <p><b>Local:</b> {{ event.location }}</p>
-  <hr />
-</div>
+<form action="" class="form-inline">
+  <div class="form-group mb-2">
+    <input type="text" class="form-control mr-2" placeholder="Buscar" />
+    <button class="btn btn-outline-success">Buscar</button>
+  </div>
+</form>
+<table class="table table-striped">
+  <thead class="thead-dark">
+    <tr>
+      <th>#</th>
+      <th>Imagem</th>
+      <th>Tema</th>
+      <th>Local</th>
+      <th>Data</th>
+      <th>Qtde. Palestrantes</th>
+      <th>Lote</th>
+      <th>Opções</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+    </tr>
+  </tbody>
+</table>
