binding events data

--- a/ProEvents/Front/ProEvents-App/src/app/events/events.component.html
+++ b/ProEvents/Front/ProEvents-App/src/app/events/events.component.html
@@ -21,15 +21,24 @@
     </tr>
   </thead>
   <tbody>
-    <tr>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
+    <tr *ngFor="let event of events">
+      <td>{{ event.id }}</td>
+      <td>
+        <img class="img-rounded img-responsive" src="{{ event.imageURL }}" />
+      </td>
+      <td>{{ event.theme }}</td>
+      <td>{{ event.location }}</td>
+      <td>
+        {{ event.eventDate | date : "dd/MM/yyyy" }}
+        <span class="time">{{ event.eventDate | date : "HH:mm" }}</span>
+      </td>
+      <td>{{ event.numberPeople }}</td>
+      <td>{{ event.lote }}</td>
+      <td>
+        <button class="btn btn-primary">Detalhes</button>
+        <button class="btn btn-primary">Editar</button>
+        <button class="btn btn-danger">Excluir</button>
+      </td>
     </tr>
   </tbody>
 </table>
