filter data in grid

--- a/ProEvents/Front/ProEvents-App/src/app/events/events.component.html
+++ b/ProEvents/Front/ProEvents-App/src/app/events/events.component.html
@@ -7,12 +7,12 @@
       type="text"
       class="form-control mr-2"
       placeholder="Buscar"
-      [(ngModel)]="listFilter"
+      [(ngModel)]="searchText"
     />
     <button class="btn btn-outline-success">Buscar</button>
   </div>
 </div>
-<h3>Filtro: {{ listFilter }}</h3>
+<h3>Filtro: {{ searchText }}</h3>
 <table class="table table-striped">
   <thead class="thead-dark">
     <tr>
