icons in buttons edit and delete event component

--- a/ProEvents/Front/ProEvents-App/src/app/events/events.component.html
+++ b/ProEvents/Front/ProEvents-App/src/app/events/events.component.html
@@ -54,12 +54,14 @@
         <span class="time">{{ event.eventDate | date : "HH:mm" }}</span>
       </td>
       <td>{{ event.numberPeople }}</td>
-      <td>{{ event.batch }}</td>
+      <td>{{ event.batchs.length > 0 ? event.batchs[0].name : "N/A" }}</td>
       <td>
         <button type="button" class="btn btn-primary btn-sm mr-2">
-          Editar
+          <i class="fa fa-edit"></i>
         </button>
-        <button type="button" class="btn btn-danger btn-sm">Excluir</button>
+        <button type="button" class="btn btn-danger btn-sm">
+          <i class="fa fa-times"></i>
+        </button>
       </td>
     </tr>
   </tbody>
