--- a/ProEvents/Front/ProEvents-App/src/app/app.component.html
+++ b/ProEvents/Front/ProEvents-App/src/app/app.component.html
@@ -2,8 +2,19 @@
 
 <div class="container">
   <app-events></app-events>
+  <app-contacts></app-contacts>
+  <app-dashboard></app-dashboard>
+  <app-profile></app-profile>
+  <app-speakers></app-speakers>
 
   <router-outlet></router-outlet>
 </div>
 
-<ngx-spinner type="ball-scale-multiple"></ngx-spinner>
+<ngx-spinner
+  bdColor="rgba(51,51,51,0.8)"
+  size="medium"
+  color="#fff"
+  type="ball-scale-multiple"
+>
+  <p style="font-size: 20px; color: white">Carregando...</p>
+</ngx-spinner>
