--- a/ProEvents/Front/ProEvents-App/src/app/shared/nav/nav.component.html
+++ b/ProEvents/Front/ProEvents-App/src/app/shared/nav/nav.component.html
@@ -20,23 +20,25 @@
       [isAnimated]="true"
     >
       <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Eventos</a>
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" aria-current="page" routerLink="events"
+            >Eventos</a
+          >
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Palestrantes</a>
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" routerLink="speakers">Palestrantes</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Contatos</a>
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" routerLink="contacts">Contatos</a>
         </li>
       </ul>
 
       <ul class="navbar-nav">
-        <li class="nav-item dropdown" dropdown>
+        <li class="nav-item dropdown" dropdown routerLinkActive="active">
           <a
             dropdownToggle
             class="nav-link dropdown-toggle"
-            href="#"
+            routerLink=""
             id="navbarDropdownMenuLink"
             data-toggle="dropdown"
             aria-haspopup="true"
@@ -49,7 +51,7 @@
             class="dropdown-menu"
             aria-labelledby="navbarDropdownMenuLink"
           >
-            <a class="dropdown-item" href="#"> Perfil </a>
+            <a class="dropdown-item" routerLink="profile"> Perfil </a>
             <div role="separator" class="divider"></div>
             <a class="dropdown-item" href="#"> Sair </a>
           </div>
