add dependency bootswatch

--- a/ProEvents/Front/ProEvents-App/src/app/shared/nav/nav.component.html
+++ b/ProEvents/Front/ProEvents-App/src/app/shared/nav/nav.component.html
@@ -39,6 +39,7 @@
             dropdownToggle
             class="nav-link dropdown-toggle"
             routerLink=""
+            style="cursor: pointer"
             id="navbarDropdownMenuLink"
             data-toggle="dropdown"
             aria-haspopup="true"
