apply style component title

--- a/ProEvents/Front/ProEvents-App/src/app/components/contacts/contacts.component.html
+++ b/ProEvents/Front/ProEvents-App/src/app/components/contacts/contacts.component.html
@@ -1,2 +1,2 @@
-<app-title title="Contatos"></app-title>
+<app-title [title]="'Contatos'" [iconClass]="'fa fa-phone'"></app-title>
 <p>contacts works!</p>
