--- a/ProEvents/Front/ProEvents-App/src/app/components/dashboard/dashboard.component.html
+++ b/ProEvents/Front/ProEvents-App/src/app/components/dashboard/dashboard.component.html
@@ -1,2 +1,5 @@
-<app-title title="Dashboard"></app-title>
+<app-title
+  [title]="'Dashboard'"
+  [iconClass]="'fa-solid fa-chart-line'"
+></app-title>
 <p>dashboard works!</p>
