--- a/ProEvents/Front/ProEvents-App/src/app/components/profile/profile.component.html
+++ b/ProEvents/Front/ProEvents-App/src/app/components/profile/profile.component.html
@@ -1,2 +1,2 @@
-<app-title title="Perfil"></app-title>
+<app-title [title]="'Perfil'" [buttonSearchVisible]="false"></app-title>
 <p>profile works!</p>
