--- a/ProEvents/Front/ProEvents-App/src/app/components/speakers/speakers.component.html
+++ b/ProEvents/Front/ProEvents-App/src/app/components/speakers/speakers.component.html
@@ -1,2 +1,5 @@
-<app-title title="Palestrantes"></app-title>
+<app-title
+  [title]="'Palestrantes'"
+  [iconClass]="'fa fa-ear-listen'"
+></app-title>
 <p>speakers works!</p>
