--- a/ProEvents/Front/ProEvents-App/src/app/components/events/events.component.html
+++ b/ProEvents/Front/ProEvents-App/src/app/components/events/events.component.html
@@ -1,4 +1,4 @@
-<app-title title="Eventos"></app-title>
+<app-title [title]="'Eventos'" [iconClass]="'fa fa-calendar'"></app-title>
 
 <div class="form-inline">
   <div class="form-group mb-2">
