--- a/ProEvents/Front/ProEvents-App/src/app/components/events/events.component.html
+++ b/ProEvents/Front/ProEvents-App/src/app/components/events/events.component.html
@@ -1,108 +1,6 @@
-<app-title [title]="'Eventos'" [iconClass]="'fa fa-calendar'"></app-title>
-
-<div class="card p-3 rounded shadow-sm">
-  <div class="d-flex">
-    <div class="flex-fill pr-3">
-      <div class="input-group mb-2">
-        <div class="input-group-prepend">
-          <div class="input-group-text">Filtro:</div>
-        </div>
-        <input
-          type="text"
-          class="form-control mr-2"
-          placeholder="Digite para filtrar..."
-          [(ngModel)]="searchText"
-        />
-      </div>
-    </div>
-    <div>
-      <a href="#" class="d-flex btn btn-outline-primary">
-        <i class="fa fa-plus-circle my-1"></i>
-        <b class="ml-1 d-none d-sm-block">Novo</b>
-      </a>
-    </div>
-  </div>
-  <table class="table table-striped">
-    <thead class="thead-dark">
-      <tr>
-        <th class="d-none d-sm-table-cell">
-          <button
-            type="button"
-            class="btn btn-outline-light btn-sm"
-            (click)="showImage = !showImage"
-          >
-            <i
-              *ngIf="showImage"
-              class="fa fa-eye"
-              tooltip="Mostrar imagens"
-            ></i>
-            <i
-              *ngIf="!showImage"
-              class="fa fa-eye-slash"
-              tooltip="Ocultar imagens"
-            ></i>
-          </button>
-        </th>
-        <th>#</th>
-        <th>Tema</th>
-        <th class="d-none d-sm-table-cell">Local</th>
-        <th>Data</th>
-        <th class="d-none d-sm-table-cell">Qtde. Pessoas</th>
-        <th class="d-none d-sm-table-cell">Lote</th>
-        <th>Opções</th>
-      </tr>
-    </thead>
-    <tbody *ngIf="events && events.length > 0">
-      <tr *ngFor="let event of events">
-        <td class="d-none d-sm-table-cell">
-          <img
-            [collapse]="!showImage"
-            [isAnimated]="true"
-            [style.width.px]="widthImg"
-            [style.margin.px]="marginImg"
-            src="\assets/{{ event.imageURL }}"
-            alt=" {{ event.imageURL }}"
-          />
-        </td>
-        <td>{{ event.id }}</td>
-        <td>{{ event.theme }}</td>
-        <td class="d-none d-sm-table-cell">{{ event.location }}</td>
-        <td>
-          {{ event.eventDate | DateTimeFormat }}
-        </td>
-        <td class="d-none d-sm-table-cell">{{ event.numberPeople }}</td>
-        <td class="d-none d-sm-table-cell">
-          {{ event.batchs.length > 0 ? event.batchs[0].name : "N/A" }}
-        </td>
-        <td>
-          <button
-            type="button"
-            class="btn btn-danger btn-lg"
-            (click)="openModal(template)"
-          >
-            <i class="fa fa-times" tooltip="Excluir"></i>
-          </button>
-        </td>
-      </tr>
-    </tbody>
-    <tfoot>
-      <tr *ngIf="events && events.length == 0">
-        <td colspan="8" class="text-center">
-          <h4>Nenhum evento encontrado</h4>
-        </td>
-      </tr>
-    </tfoot>
-  </table>
-</div>
-
-<ng-template #template>
-  <div class="modal-body text-center">
-    <p>Deseja realmente excluir esse evento?</p>
-    <button type="button" class="btn btn-default" (click)="confirm()">
-      Sim
-    </button>
-    <button type="button" class="btn btn-primary" (click)="decline()">
-      Não
-    </button>
-  </div>
-</ng-template>
+<app-title
+  [title]="'Eventos'"
+  [iconClass]="'fa fa-calendar'"
+  [routerGroup]="'events'"
+></app-title>
+<router-outlet></router-outlet>
