--- a/ProEvents/Front/ProEvents-App/src/app/shared/nav/nav.component.html
+++ b/ProEvents/Front/ProEvents-App/src/app/shared/nav/nav.component.html
@@ -21,7 +21,7 @@
     >
       <ul class="navbar-nav">
         <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link" aria-current="page" routerLink="events"
+          <a class="nav-link" aria-current="page" routerLink="events/list"
             >Eventos</a
           >
         </li>
