--- a/ProEvents/Front/ProEvents-App/src/app/shared/title/title.component.html
+++ b/ProEvents/Front/ProEvents-App/src/app/shared/title/title.component.html
@@ -12,7 +12,10 @@
     *ngIf="buttonSearchVisible"
     class="d-flex justify-content-center align-items-center"
   >
-    <button class="btn btn-outline-light d-flex align-items-center">
+    <button
+      class="btn btn-outline-light d-flex align-items-center"
+      (click)="list()"
+    >
       <i id="search-button" class="fa fa-magnifying-glass"></i>
       <p class="d-none d-sm-block mb-0 ml-2">Buscar dados</p>
     </button>
