--- a/ProEvents/Front/ProEvents-App/src/app/components/user/login/login.component.html
+++ b/ProEvents/Front/ProEvents-App/src/app/components/user/login/login.component.html
@@ -25,7 +25,7 @@
         Entrar
       </button>
       <p class="mt-4 mb-2 text-muted">Não tem login? Cadastre-se abaixo</p>
-      <a class="btn btn-lg btn-link btn-block">Quero me cadastrar</a>
+      <a class="btn btn-lg btn-link btn-block" routerLink="/user/registration">Quero me cadastrar</a>
     </form>
   </div>
 </div>
