--- a/ProEvents/Front/ProEvents-App/src/app/components/events/events-list/events-list.component.html
+++ b/ProEvents/Front/ProEvents-App/src/app/components/events/events-list/events-list.component.html
@@ -74,7 +74,7 @@
         </td>
         <td class="d-none d-sm-table-cell">{{ event.numberPeople }}</td>
         <td class="d-none d-sm-table-cell">
-          {{ event.batchs.length > 0 ? event.batchs[0].name : "N/A" }}
+          {{ event.batches.length > 0 ? event.batches[0].name : "N/A" }}
         </td>
         <td>
           <button
